app/styles/app/_timeline.scss
/* ... */
/*legenda*/
.legenda {
  background-color: #f5f4ee;
  padding-top: 10px;
  margin-top: -20px;
}

.legenda-row {
  overflow: hidden;
  display: block;
  margin: 10px 20px;

  strong {
    width: 90px;
    display: inline;
    float: left;
    text-shadow: 1px 1px 0 rgba(255, 255, 255, 1);
    margin-top: 5px;
  }

  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;

    li {
      float: left;
      margin-right: 15px;
      border-right: 1px solid #ddd;
      padding-right: 15px;
      min-width: 135px;
      font-size: 11px;

      &:last-child {
        margin-right: 0;
        border-right: none;
        padding-right: 0;
      }

      label {
        font-size: 11px;

        &:hover {
          cursor: pointer;
          color: #65619b;
        }
      }

      input {
        margin: -2px 4px 0 0;
      }
    }
  }

  .square {
    display: block;
    height: 12px;
    width: 12px;
    margin-top: 4px;
  }
}

.last-legenda-row {
  margin-bottom: -5px;
}

.legenda-row .legenda-no-state .square {
  background-color: #6cad6c;
}

.legenda-row .legenda-state-available .square {
  background-color: #6cad6c;
}

.legenda-row .legenda-state-available-north .square {
  background-color: #242424;
}

.legenda-row .legenda-state-available-south .square {
  // background-color: #8a85c7;
  background-color: #8a85c7;
}

.legenda-row .legenda-state-unavailable .square {
  background-color: #d34545;
}

.legenda-row .legenda-state-schipper-service .square {
  background-color: #f6e500;
}

//.legenda-row .legenda-state-unreached .square {
//  background-color: #65619b;
//}

.legenda-row .legenda-more .square {
  // background-color: #415e6b;
  background-color: #6cad6c;
}

.legenda-row .legenda-even .square {
  background-color: #e09131;
}

.legenda-row .legenda-less .square {
  // background-color: #a0a0a0;
  background-color: #d34545;
}

#legends {
  display: block;
  overflow: hidden;
  margin-top: 15px;
  margin-bottom: 15px;
  width: 100%;

  ul {
    margin-left: 1px;
    list-style: none;

    li {
      display: inline;
      float: left;
      margin-right: 25px;
      list-style-image: none;
    }
  }
}

.square {
  float: left;
  margin-top: 1px;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

div.bar span {
  font-size: 9px;
}

div.timeline-frame {
  border: 1px solid #ddd;
  background-color: #fff;
  overflow: hidden;
  margin-bottom: 30px;
}

div.timeline-axis {
  background-color: #676153;
  color: #fff;
  border-color: #ddd;
  border-width: 1px;
  border-top-style: solid;
}

div.timeline-axis-grid {
  border-left-style: solid;
  border-width: 1px;
}

div.timeline-axis-grid-minor {
  border-color: #e5e5e5;
}

div.timeline-axis-grid-major {
  border-color: #bfbfbf;
}

div.timeline-axis-text {
  /*color: #4D4D4D;*/
  color: #f5f4ee;
  padding: 3px;
  white-space: nowrap;
  font-size: 11px;
}

div.timeline-axis-text-minor {
}

div.timeline-axis-text-major {
}

div.timeline-event {
  /*color: #1A1A1A;*/
  /*border-color: #ddd;*/
  /*background-color: #D5DDF6;*/
  display: inline-block;

  /*padding: 0;*/

  background-color: #ddd;
}

div.timeline-event-selected {
  border-color: #FFC200;
  /*background-color: #676153;*/
  opacity: .7;
  z-index: 999;
}

div.timeline-event-cluster {
  /* TODO: use another color or pattern? */
  background: #97B0F8 url('../images/timeline/cluster_bg.png');
  color: white;
}

div.timeline-event-cluster div.timeline-event-dot {
  border-color: #D5DDF6;
}

div.timeline-event-box {
  text-align: center;
  /*border-style: solid;
  border-width: 1px;*/
  border-radius: 5px;
  -moz-border-radius: 5px; /* For Firefox 3.6 and older */
}

div.timeline-event-dot {
  border-style: solid;
  border-width: 5px;
  border-radius: 5px;
  -moz-border-radius: 5px; /* For Firefox 3.6 and older */
}

div.timeline-event-range {
  /*border-style: solid;
  border-width: 1px;
  border-radius: 2px;
  -moz-border-radius: 2px;  /* For Firefox 3.6 and older */
}

div.timeline-event-range-drag-left {
  cursor: w-resize;
  z-index: 1000;
}

div.timeline-event-range-drag-right {
  cursor: e-resize;
  z-index: 1000;
}

div.timeline-event-line {
  border-left-width: 1px;
  border-left-style: solid;
}

div.timeline-event-content {
  /*    margin: 5px;
      white-space: nowrap;
      overflow: hidden;*/

  /*background-color: #ddd*/
}

div.timeline-groups-axis {
  border-color: #BEBEBE;
  border-width: 1px;
}

div.timeline-groups-text {
  color: #4D4D4D;
  padding-left: 10px;
  padding-right: 10px;
  font-size: 11px;
}

div.timeline-currenttime {
  background-color: #FF7F6E;
  width: 2px;
  z-index: 150;
}

div.timeline-customtime {
  background-color: #6E94FF;
  width: 2px;
  cursor: move;
  z-index: 150;
}

/*div.timeline-navigation {
    font-family: arial;
    font-size: 20px;
    font-weight: bold;
    color: gray;

    border: 1px solid #BEBEBE;
    background-color: #F5F5F5;
    border-radius: 2px;
    -moz-border-radius: 2px;  */
/* For Firefox 3.6 and older */
/*}

div.timeline-navigation-new, 
div.timeline-navigation-delete,
div.timeline-navigation-zoom-in, 
div.timeline-navigation-zoom-out,
div.timeline-navigation-move-left,
div.timeline-navigation-move-right {
    cursor: pointer;
    padding: 10px 10px;
    float: left;
    text-decoration: none;
    border-color: #BEBEBE; */
/* border is used for the separator between new and navigation buttons */
/*
    width: 16px;
    height: 16px;
}*/

/*div.timeline-navigation-new {
    background: url('../images/timeline/16/new.png') no-repeat center;
}*/
/* ... */

